Updated users api to also include current users rank and his sessions
